--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <!-- Page Title -->
-    <title>Movie Title</title>
+    <title> The Lion King</title>
 
 <!-- Metadata -->
     <meta charset="UTF-8">
@@ -31,8 +31,9 @@
 
 <!-- Header -->
     <header>
-        <h1>Movie Title</h1>
-        <h5>A Very Well Written Clever Slogan for A Subpar Movie</h5>
+        <h1>The Lion King</h1>
+        <h5>A Lion cub crown prince is tricked by a treacherous uncle into thinking he caused his father's death.
+        </h5>
     </header>
 
 <!-- Main -->
