--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <p id = "head"><a href="https://www.amctheatres.com">Theater</a></p>
         <p id = "head"><a href="https://www.imdb.com/title/tt0110357/">Cast</a></p>
       </section>
-        <h1>The Lion King</h1>
-        <h5>A Lion cub crown prince is tricked by a treacherous uncle into thinking he caused his father's death.
-        </h5>
+      <img id="logo" src="https://cdn.freebiesupply.com/logos/large/2x/disneys-the-lion-king-logo-black-and-white.png" alt=""></h1>
+        <h3>A Lion cub crown prince is tricked by a treacherous uncle into thinking he caused his father's death.
+        </h3>
     </header>
 
 <!-- Main -->
