--- a/index.html
+++ b/index.html
@@ -32,17 +32,20 @@
 
 
 <!-- Header -->
-    <header>
+<header>
          <!-- Nav Bar -->
 <section id="header">
         <p><a href="http://127.0.0.1:5500/index.html">Home</a></p>
         <p><a href="http://fandango.com">Tickets</a></p>
         <p><a href="https://www.amctheatres.com">Theater</a></p>
         <p><a href="https://www.imdb.com/title/tt0110357/">Cast</a></p>
-      </section>
-      <img id="logo" src="https://cdn.freebiesupply.com/logos/large/2x/disneys-the-lion-king-logo-black-and-white.png" alt=""></h1>
-        <h3>A Lion cub crown prince is tricked by a treacherous uncle into thinking he caused his father's death.
-        </h3>
+</section>
+      <div id="lionking">
+            <img class="LionKing" src="https://ionemadamenoire.files.wordpress.com/2018/07/gettyimages-494748806.jpg?w=1024&h=575" alt="LionKing">
+        </div>
+          <img id="logo" src="https://cdn.freebiesupply.com/logos/large/2x/disneys-the-lion-king-logo-black-and-white.png" alt="">
+
+        <h3>A Lion cub crown prince is tricked by a treacherous uncle into thinking he caused his father's death.</h3>
     </header>
 
 <!-- Main -->
