Aside and CSS fixes

--- a/index.html
+++ b/index.html
@@ -140,13 +140,30 @@
 
             <section id="covers">
                     <img id="dvd" src="https://images-na.ssl-images-amazon.com/images/I/51M7QPXDNPL._SY445_.jpg" width="100px"  height="auto" alt="">
-                    <p>The Lion King</p>
+                    <div>
+                        <p id=dvdname>The Lion King</p>
+                     <button><a href="https://www.amazon.com/LION-KING-Matthew-Broderick/dp/B071G3X2GF/ref=sr_1_1?ie=UTF8&qid=1549253432&sr=8-1&keywords=the+lion+king+dvd">Buy</a></button>
+                    </div>
                     <img id="dvd" src="https://images.gr-assets.com/books/1347317539l/1268064.jpg" width="100px" height="auto" alt="">
-                    <p>The Lion King 2</p>
+                    <div>
+                            <p id=dvdname>The Lion King 2</p>
+                         <button><a href="https://www.amazon.com/Lion-King-Simbas-Pride/dp/B071WMYZRL/ref=sr_1_1?ie=UTF8&qid=1549253454&sr=8-1&keywords=the+lion+king+2+dvd">Buy</a></button>
+                        </div>
                     <img id="dvd" src="https://images-na.ssl-images-amazon.com/images/I/61xd%2BG7oZ1L._SX342_.jpg" width="100px" height="auto" alt="">
-                    <p>The Lion King 1 1/2</p>
+                    <div>
+                            <p id=dvdname>The Lion King 1 1/2</p>
+                         <button><a href="https://www.amazon.com/Lion-King-Nathan-Lane/dp/B0721313WM/ref=sr_1_1?ie=UTF8&qid=1549253489&sr=8-1&keywords=the+lion+king+1+1%2F2+dvd">Buy</a></button>
+                        </div>
                     <img id="dvd" src="https://4.bp.blogspot.com/-8FxT-yymGvA/W_c78lK4LWI/AAAAAAAAR7E/KtybKa_gJUce7bashHttn2jNaHO_7rHOACLcBGAs/s1600/The_Lion_King_2019.jpg" width="100px" height="auto" alt="">
-                    <p>The Lion King CGI</p>
+                    <div>
+                            <p id=dvdname>The Lion King CGI</p>
+                         <button><a href="https://www.imdb.com/title/tt6105098/">Info</a></button>
+                        </div>
+                        <img id="dvd" src="https://imaging.broadway.com/images/poster-178275/w230/222222/93607-3.jpg" width="100px" height="auto" alt="">
+                    <div>
+                            <p id=dvdname>The Lion King Musical</p>
+                         <button><a href="https://www.lionking.com/"></a>Info</button>
+                        </div>
                   </section>
     </aside>
     
