--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
         <p><a href="https://www.amctheatres.com">Theater</a></p>
         <p><a href="https://www.imdb.com/title/tt0110357/">Cast</a></p>
 </section>
-      <div id="lionking">
-            <img class="LionKing" src="https://ionemadamenoire.files.wordpress.com/2018/07/gettyimages-494748806.jpg?w=1024&h=575" alt="LionKing">
-        </div>
-          <img id="logo" src="https://cdn.freebiesupply.com/logos/large/2x/disneys-the-lion-king-logo-black-and-white.png" alt="">
+<div id= "logo">
+<img  src="/img/logo.png" alt="">
+</div>
 
         <h3>A Lion cub crown prince is tricked by a treacherous uncle into thinking he caused his father's death.</h3>
     </header>
@@ -56,7 +55,7 @@
         <source src="video/trailer.mp4">
         <source src="video/trailer.webm">
     </video>
-    <article>
+    <article id="brief">
 
             <p>
                 A young lion prince is born in Africa, thus making his uncle Scar the second in line to the throne. 
@@ -70,8 +69,8 @@
 <!-- Actors -->    
         <section id=actors>
 
-            <figure>
-                <img src="https://m.media-amazon.com/images/M/MV5BMTg3NDUzOTc3MV5BMl5BanBnXkFtZTcwNjcxMDkxNw@@._V1_UY317_CR0,0,214,317_AL_.jpg" width="90px" height="auto" alt="Zazu">
+            <figure id="zazu">
+                <img  src="https://m.media-amazon.com/images/M/MV5BMTg3NDUzOTc3MV5BMl5BanBnXkFtZTcwNjcxMDkxNw@@._V1_UY317_CR0,0,214,317_AL_.jpg" width="90px" height="auto" alt="Zazu">
                 <figcaption>
                 Rowan Atkinson | Zazu
                 </figcaption>
