lettering and css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <img  src="/img/logo.png" alt="">
 </div>
 
-        <h3>A Lion cub crown prince is tricked by a treacherous uncle into thinking he caused his father's death.</h3>
+        <h3>A lion cub crown prince is tricked by a treacherous uncle into thinking he caused his father's death.</h3>
     </header>
 
 <!-- Main -->
