--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <header>
          <!-- Nav Bar -->
 <section id="header">
-        <p><a href="http://127.0.0.1:5500/index.html">Home</a></p>
-        <p><a href="http://fandango.com">Tickets</a></p>
-        <p><a href="https://www.amctheatres.com">Theater</a></p>
-        <p><a href="https://www.imdb.com/title/tt0110357/">Cast</a></p>
+        <p><a href="http://127.0.0.1:5500/index.html" id="home">Home</a></p>
+        <p><a href="http://fandango.com" id="tickets">Tickets</a></p>
+        <p><a href="https://www.amctheatres.com" id="theater">Theater</a></p>
+        <p ><a href="https://www.imdb.com/title/tt0110357/" id="casts">Casts</a></p>
 </section>
 <div id= "logo">
 <img  src="/img/logo.png" alt="">
