--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p ><a href="https://www.imdb.com/title/tt0110357/" id="casts">Casts</a></p>
 </section>
 <div id= "logo">
-<img  src="/img/logo.png" alt="">
+<img  src="img/logo.png" alt="">
 </div>
 
         <h3>A lion cub crown prince is tricked by a treacherous uncle into thinking he caused his father's death.</h3>
